# Domains/Context/BankAccount/Infrastructure/Framework/Routes/api.php
@@ -3,6 +3,7 @@
 Route::group(['prefix' => 'bankaccount'], function () {
     Route::group(['prefix' => 'account'], function () {
         Route::post('/', 'AccountController@create');
+        Route::get('/{account_id}/transactions', 'AccountController@allTransactions');
     });
     Route::group(['prefix' => 'balance'], function () {
         Route::patch('/{account_id}', 'BalanceController@update');
